Add: Implement Swagger documentation using SpringDoc OpenAPI
- Added the 'springdoc-openapi-ui' dependency (version 2.3.0) to enable Swagger UI.
- Configured Swagger for API documentation.
- Enabled Swagger UI to visualize and interact with the API documentation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/easyOnlineShop?createDatabaseI
 spring.datasource.username=root
 spring.datasource.password=root
 
+#Habilitar o deshabilitar api-docs - swagger-ui
+springdoc.api.docs.enabled=true
+spring.dwagger-ui.enabled=true
+
+#Definir la ruta de swagger-ui
+springdoc.swagger-ui.path=/doc/swagger-ui.html
+
+
+
 #jpa vendor adapter configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
