--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/easyOnlineShop?createDatabaseI
 spring.datasource.username=root
 spring.datasource.password=root
 
-#Habilitar o deshabilitar api-docs - swagger-ui
+#Enable or disable api-docs - swagger-ui
 springdoc.api.docs.enabled=true
-spring.dwagger-ui.enabled=true
+springdoc.swagger-ui.enabled=true
 
-#Definir la ruta de swagger-ui
-springdoc.swagger-ui.path=/doc/swagger-ui.html
+#Define the swagger-ui path
+springdoc.swagger-ui.path=/public/doc/swagger-ui.html
 
 
 
